# backend/generated/liste/handler.go
@@ -1,7 +1,7 @@
-// Package generated provides primitives to interact with the openapi HTTP API.
+// Package liste provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/deepmap/oapi-codegen version v1.16.3 DO NOT EDIT.
-package generated
+package liste
 
 import (
 	"fmt"
@@ -13,15 +13,6 @@ import (
 
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
-	// henter alle album
-	// (GET /albums)
-	GetAlbums(w http.ResponseWriter, r *http.Request)
-	// nytt album
-	// (POST /albums)
-	CreateAlbum(w http.ResponseWriter, r *http.Request)
-
-	// (GET /anmeldelse/slim/{brukerId})
-	GetAlleAnmeldelserForBruker(w http.ResponseWriter, r *http.Request, brukerId string)
 
 	// (GET /liste/test/{id})
 	GetListeTest(w http.ResponseWriter, r *http.Request, id int)
@@ -33,23 +24,6 @@ type ServerInterface interface {
 // Unimplemented server implementation that returns http.StatusNotImplemented for each endpoint.
 
 type Unimplemented struct{}
-
-// henter alle album
-// (GET /albums)
-func (_ Unimplemented) GetAlbums(w http.ResponseWriter, r *http.Request) {
-	w.WriteHeader(http.StatusNotImplemented)
-}
-
-// nytt album
-// (POST /albums)
-func (_ Unimplemented) CreateAlbum(w http.ResponseWriter, r *http.Request) {
-	w.WriteHeader(http.StatusNotImplemented)
-}
-
-// (GET /anmeldelse/slim/{brukerId})
-func (_ Unimplemented) GetAlleAnmeldelserForBruker(w http.ResponseWriter, r *http.Request, brukerId string) {
-	w.WriteHeader(http.StatusNotImplemented)
-}
 
 // (GET /liste/test/{id})
 func (_ Unimplemented) GetListeTest(w http.ResponseWriter, r *http.Request, id int) {
@@ -69,62 +43,6 @@ type ServerInterfaceWrapper struct {
 }
 
 type MiddlewareFunc func(http.Handler) http.Handler
-
-// GetAlbums operation middleware
-func (siw *ServerInterfaceWrapper) GetAlbums(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.GetAlbums(w, r)
-	}))
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler.ServeHTTP(w, r.WithContext(ctx))
-}
-
-// CreateAlbum operation middleware
-func (siw *ServerInterfaceWrapper) CreateAlbum(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.CreateAlbum(w, r)
-	}))
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler.ServeHTTP(w, r.WithContext(ctx))
-}
-
-// GetAlleAnmeldelserForBruker operation middleware
-func (siw *ServerInterfaceWrapper) GetAlleAnmeldelserForBruker(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	var err error
-
-	// ------------- Path parameter "brukerId" -------------
-	var brukerId string
-
-	err = runtime.BindStyledParameterWithLocation("simple", false, "brukerId", runtime.ParamLocationPath, chi.URLParam(r, "brukerId"), &brukerId)
-	if err != nil {
-		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "brukerId", Err: err})
-		return
-	}
-
-	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.GetAlleAnmeldelserForBruker(w, r, brukerId)
-	}))
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler.ServeHTTP(w, r.WithContext(ctx))
-}
 
 // GetListeTest operation middleware
 func (siw *ServerInterfaceWrapper) GetListeTest(w http.ResponseWriter, r *http.Request) {
@@ -291,15 +209,6 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 		ErrorHandlerFunc:   options.ErrorHandlerFunc,
 	}
 
-	r.Group(func(r chi.Router) {
-		r.Get(options.BaseURL+"/albums", wrapper.GetAlbums)
-	})
-	r.Group(func(r chi.Router) {
-		r.Post(options.BaseURL+"/albums", wrapper.CreateAlbum)
-	})
-	r.Group(func(r chi.Router) {
-		r.Get(options.BaseURL+"/anmeldelse/slim/{brukerId}", wrapper.GetAlleAnmeldelserForBruker)
-	})
 	r.Group(func(r chi.Router) {
 		r.Get(options.BaseURL+"/liste/test/{id}", wrapper.GetListeTest)
 	})
