# backend/handlers/composite_handler.go
@@ -6,25 +6,28 @@ import (
 	"github.com/SturlaSolheim/mediaCircleBackend/generated"
 	"github.com/SturlaSolheim/mediaCircleBackend/generated/albums"
 	"github.com/SturlaSolheim/mediaCircleBackend/generated/anmeldelse"
+	"github.com/SturlaSolheim/mediaCircleBackend/generated/liste"
 )
 
 type CompositeHandler struct {
 	albumHandler  albums.ServerInterface
 	anmeldelseHandler  anmeldelse.ServerInterface
+	listeHandler liste.ServerInterface
 }
 
 func NewCompositeHandler(
 	albumHandler albums.ServerInterface,
 	anmeldelseHandler anmeldelse.ServerInterface,
+	listeHandler liste.ServerInterface,
 ) generated.ServerInterface {
 	return &CompositeHandler{
 		albumHandler:  albumHandler,
 		anmeldelseHandler:  anmeldelseHandler,
+		listeHandler: listeHandler,
 	}
 }
 
 // Albums
-
 func (c *CompositeHandler) GetAlbums(w http.ResponseWriter, r *http.Request) {
 	c.albumHandler.GetAlbums(w, r)
 }
@@ -37,4 +40,12 @@ func (c *CompositeHandler) CreateAlbum(w http.ResponseWriter, r *http.Request) {
 
 func (c *CompositeHandler) GetAlleAnmeldelserForBruker(w http.ResponseWriter, r *http.Request, bruker string) {
 	c.anmeldelseHandler.GetAlleAnmeldelserForBruker(w, r, bruker)
+}
+
+// Liste
+func (c *CompositeHandler) GetListe(w http.ResponseWriter, r *http.Request, id int) {
+	c.listeHandler.GetListe(w, r, id)
+}
+func (c *CompositeHandler) GetListeTest(w http.ResponseWriter, r *http.Request, id int) {
+	c.listeHandler.GetListeTest(w, r, id)
 }
